argocd/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "cilium"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: deploy.k8s.wlankabel.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - deploy.k8s.wlankabel.ch
    secretName: argocd-tls
...
